--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         condition: service_healthy
     networks:
       - vpnbot
+    ports:
+      - "8080:8080"  # ← ДОБАВЬТЕ ЭТО!
 
   postgres:
     image: postgres:16-alpine
